crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__child_block_text_only.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { just text }</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 27,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 23,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                        },
                                        value: Var(
                                            "x",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 23,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 11,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 22,
                                                            },
                                                        },
                                                        value: Text(
                                                            " just text ",
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                            final_else: None,
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
